[tool.poetry]
name = "nanogpt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
pandas = "^2.1.3"
torch = "^2.1.1"
transformers = "^4.35.2"
datasets = "^2.15.0"
tiktoken = "^0.5.2"
wandb = "^0.16.0"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
